--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "title":"Leon's Blog",
     "subTitle":"在这里记录我的学习与生活",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"，
+    "GMEEK_VERSION":"last",
     "displayTitle":"里昂",
     "homeUrl":"http://blog.meekdai.com",
     "faviconUrl":"https://github.githubassets.com/favicons/favicon.svg",
