--- a/config.json
+++ b/config.json
@@ -12,9 +12,9 @@
     "singlePage": ["about"],
     "iconList": {
         "music": "<svg>...</svg>"
-    },
+    }, 
     "exlink": {
-        "music": "https://music.meekdai.com",
+        "music": "https://music.meekdai.com"
     },
     "commentLabelColor": "#006b75",
     "yearColorList": ["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
