--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Leon's Blog",
     "subTitle": "在这里记录我的学习与生活",
-    "avatarUrl": "https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl": "https://vip.helloimg.com/i/2024/08/06/66b2304db3e0f.jpg",
     "GMEEK_VERSION": "last",
     "displayTitle": "里昂",
     "homeUrl": "http://blog.meekdai.com",
