--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "avatarUrl": "https://vip.helloimg.com/i/2024/08/06/66b2304db3e0f.jpg",
     "GMEEK_VERSION": "last",
     "displayTitle": "里昂",
-    "homeUrl": "http://blog.meekdai.com",
+    "homeUrl": "https://leon0310.github.io/leon0310.giuhub.io/",
     "email": "1873743450@qq.com",
     "startSite": "2024-08-06",
     "onePageListNum": 15,
